--- a/app/src/main/res/menu/toolbar_tracking_menu.xml
+++ b/app/src/main/res/menu/toolbar_tracking_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/miCancelTracking"
-        android:icon="@drawable/ic_close_white"
+        android:icon="@drawable/ic_close_black"
         android:visible="false"
         app:showAsAction="always"
         android:title="Cancel Run" />
